--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Welcome to my website !</h1>
+        <h2>You're talented and intelligent,<h2>
         Hello, Captain.
     </body>
 </html>
