Add exclamation point

--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,10 @@
         <title>Hello</title>
     </head>
     <body>
-        <h1>Welcome to my website !</h1>
+        <h1>Welcome to my website !!</h1>
         <h2>You're talented and intelligent,<h2>
-        Hello, Captain.
+                Hello, Captain.
+            </body>
+        </html>
     </body>
 </html>
